# flotte

./: .gitignore  CLAUDE.md  LICENSE  README.md  config.toml.example  install.sh  pyproject.toml
flotte/: .gitignore  README.md  __init__.py  __main__.py  app.py  config.py  install.sh  messages.py  pyproject.toml  theme.py
flotte/flotte/: app.py  config.py  state.py
flotte/flotte/models/: __init__.py  container.py  project.py  worktree.py
flotte/flotte/screens/: __init__.py  create_worktree.py  help_screen.py
flotte/flotte/services/: __init__.py  docker_manager.py  ride_wrapper.py  transient_state.py  worktree_manager.py
flotte/flotte/styles/: app.tcss  base.tcss
flotte/flotte/styles/themes/: onedark.tcss  onelight.tcss
flotte/flotte/widgets/: __init__.py  container_controls.py  container_table.py  status_line.py  worktree_header.py
flotte/models/: __init__.py  container.py  project.py  worktree.py
flotte/screens/: confirm_dialog.py  create_worktree.py  delete_worktree.py  help_screen.py
flotte/services/: docker_manager.py  worktree_manager.py
flotte/styles/: base.tcss
flotte/styles/themes/: onedark.tcss  onelight.tcss
flotte/widgets/: container_table.py  error_view.py  progress_view.py  status_line.py  worktree_header.py
ride_commands/: i3_workspace
