[project]
name = "flotte"
dynamic = ["version"]
description = "TUI for managing docker-compose projects across git worktrees"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.47.0",
    "rich>=13.7.0",
]

[project.scripts]
flotte = "flotte.__main__:main"

[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["flotte*"]

[tool.setuptools.package-data]
flotte = ["styles/themes/*.tcss"]

[tool.setuptools_scm]
